--- a/buildspecs/plan.yml
+++ b/buildspecs/plan.yml
@@ -1,12 +1,18 @@
 version: 0.2
 
 phases:
+  install:
+    commands:
+      - "apt install unzip -y"
+      - "wget https://releases.hashicorp.com/terraform/1.2.4/terraform_1.2.4_linux_amd64.zip"
+      - "unzip terraform_1.2.4_linux_amd64.zip"
+      - "mv terraform /usr/local/bin"
   pre_build:
     commands:
-      - echo "Entering pre_build phase"
+      - terraform init
   build:
     commands:
-      - echo "Entering build phase"
+      - terraform plan -auto-approve
   post_build:
     commands:
-      - echo "Entering post_build phase"
+      - echo terraform plan completed on `date`
