Move infrastructure to a dev folder

--- a/buildspecs/apply.yml
+++ b/buildspecs/apply.yml
@@ -11,6 +11,7 @@ phases:
       - "mv terraform /usr/local/bin"
   pre_build:
     commands:
+      - cd dev
       - terraform init
   build:
     commands:
