--- a/buildspecs/pipeline.yml
+++ b/buildspecs/pipeline.yml
@@ -9,6 +9,9 @@ phases:
       - "wget https://releases.hashicorp.com/terraform/1.2.4/terraform_1.2.4_linux_amd64.zip"
       - "unzip terraform_1.2.4_linux_amd64.zip"
       - "mv terraform /usr/local/bin"
+      - "curl 'https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip' -o 'awscliv2.zip'"
+      - "unzip awscliv2.zip"
+      - "./aws/install -i /usr/local/aws-cli -b /usr/local/bin"
   pre_build:
     commands:
       - cd pipelines
@@ -20,3 +23,4 @@ phases:
   post_build:
     commands:
       - echo pipeline updated `date`
+      - aws codepipeline start-pipeline-execution --name tf-test-pipeline
