--- a/.github/workflows/yamllint.yml
+++ b/.github/workflows/yamllint.yml
@@ -1,17 +1,18 @@
+---
 name: 'Yamllint GitHub Actions'
-on:
+on:  # yamllint disable-line rule:truthy
   push:
-    branches: [ "mainline" ]
+    branches: ["mainline"]
   pull_request:
-    branches: [ "mainline" ]
+    branches: ["mainline"]
 jobs:
   yamllint:
     name: 'Yamllint'
-    runs-on: ubuntu-latest
+    runs-on: 'ubuntu-latest'
     steps:
       - name: 'Checkout'
-        uses: actions/checkout@master
+        uses: 'actions/checkout@master'
       - name: 'Yamllint'
-        uses: karancode/yamllint-github-action@master
+        uses: 'karancode/yamllint-github-action@master'
         env:
-          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_ACCESS_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
